Fix pagination style on mobile devices

--- a/web/src/layout/common/Pagination.module.css
+++ b/web/src/layout/common/Pagination.module.css
@@ -6,8 +6,4 @@
   .pagination {
     font-size: 0.7rem;
   }
-
-  .btnIcon {
-    line-height: 1rem;
-  }
 }
